# parallel-dsp

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/rustsource/: Cargo.toml  package.json
src-tauri/src/: main.rs
src-tauri/src/dsp/: generators.rs  mod.rs
src-tauri/src/io/: device_in.rs  device_out.rs  midi.rs  mod.rs
src-tauri/src/utils/: double_buffer.rs  mod.rs  tauri.rs
src/cli/: mod.rs
src/dsp/: mod.rs  oscillators.rs
src/io/: device_in.rs  device_out.rs  file_in.rs  mod.rs
src/utils/: double_buffer.rs  mod.rs
