[package]
name = "parallel-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
fon = "0.6.0"
fundsp = "0.16.0"
hound = "3.5.1"
itertools = "0.12.1"
midir = "0.9.1"
midly = "0.5.3"
ringbuf = "0.3.3"
rubato = "0.15.0"
symphonia = "0.5.4"
thread-priority = "0.16.0"
